name:                DistanceTransform
version:             0.1.0.0
synopsis:            Distance transform function.
--description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           (c) Anthony Cowley 2012
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     DistanceTransform.Euclidean2D, 
                       DistanceTransform.Euclidean3D,
                       DistanceTransform.Internal.STNum,
                       DistanceTransform.Internal.Extended
  -- other-modules:       
  build-depends:       base >=4.6 && < 5, vector >=0.9, linear >=0.2, 
                       JuicyPixels ==2.0.*
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall