name:                DistanceTransform
version:             0.1.2
synopsis:            Distance transform function.
description:         An N-D distance transform that computes the Euclidean
                     distance between each element in a discrete field and the nearest cell
                     containing a zero.
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           (c) Anthony Cowley 2012,2013
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     DistanceTransform.Euclidean,
                       DistanceTransform.Internal.Indexer
                       
  -- other-modules:       
  build-depends:       base >=4.6 && < 5, vector >=0.9, linear >=0.2, primitive
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall